txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -93,7 +93,7 @@ Suppose we have a binary file called "library$\_$inventory.dat" that stores info
 
 \section{Writing to Binary Files}
 
-Now, let's assume we want to create a new binary file called "new$_$inventory.dat" to store the updated inventory of the library. We have an array of structs called "Book" containing the book title, author, and publication year. The following example demonstrates how to write data to a binary file using {\tt fwrite()}:
+Now, let's assume we want to create a new binary file called "new$\_$inventory.dat" to store the updated inventory of the library. We have an array of structs called "Book" containing the book title, author, and publication year. The following example demonstrates how to write data to a binary file using {\tt fwrite()}:
 
 \begin{verbatim}
 	Book library_books[] = {
