txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -45,7 +45,7 @@ well as whether the file is to be created if it does not exist.
 
 There are several modes in which a file can be opened, including:
 
-"r": Open file for reading
+item[r]: Open file for reading
 "w": Open file for writing (overwrite if file already exists)
 "a": Open file for appending (write to end of file)
 "r+": Open file for both reading and writing
