txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -48,8 +48,8 @@ There are several modes in which a file can be opened, including:
 \item[r]: Open file for reading
 \item[w]: Open file for writing (overwrite if file already exists)
 \item[a]: Open file for appending (write to end of file)
-\item[r+]: Open file for both reading and writing
-\item[w+]: Open file for both reading and writing (overwrite if file already exists)
+\item[r$+$]: Open file for both reading and writing
+\item[w$+$]: Open file for both reading and writing (overwrite if file already exists)
 \item[a$+$]: Open file for both reading and writing (write to end of file)
 \end{description}
 Once a file has been opened, we can perform operations on it, such as reading data from
