txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -196,7 +196,7 @@ or even crashes. Another common error is not properly closing a file when we
 are finished using it. This can lead to resource leaks and cause issues if we
 attempt to open the file again later.
 
-\section{Finding the Size of a File}
+\section{Finding the size of a file}
 
 Determining the size of a file can be useful in many scenarios, such as when reading or writing binary data to a file. In C, we can use the {\tt ftell()} and {\tt fseek()} functions to determine the size of a file.
 
