txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -187,7 +187,7 @@ For example, to move the file pointer to the beginning of the file, we would use
 The {\tt rewind()} function is a simpler way to move the file pointer to the
 beginning of the file. It takes the file pointer as an argument and moves the
 pointer to the beginning of the file, equivalent to using {\tt fseek()} with
-an offset of 0 and {\tt SEEK_SET} as the origin.
+an offset of 0 and {\tt SEEK$\_$SET} as the origin.
 
 When working with files, it is important to be aware of common errors that can
 occur. One common error is failing to check if a file was opened successfully
