txs auto checkin

--- a/Chapter10_Files.tex
+++ b/Chapter10_Files.tex
@@ -173,9 +173,9 @@ position within a file. It takes three arguments: the file pointer, the offset
 the pointer movement). The origin can be one of the following:
 
 \begin{itemize}
-	\item {\tt SEEK_SET}: Beginning of file
-	\item {\tt SEEK_CUR}: Current position of file pointer
-	\item {\tt SEEK_END}: End of file
+	\item {\tt SEEK$\_$SET}: Beginning of file
+	\item {\tt SEEK$\_$CUR}: Current position of file pointer
+	\item {\tt SEEK$\_$END}: End of file
 \end{itemize}
 
 For example, to move the file pointer to the beginning of the file, we would use:
