txs auto checkin

--- a/Chapter9_Struct.tex
+++ b/Chapter9_Struct.tex
@@ -487,7 +487,7 @@ The output of this program shows that the variable
 values have been swapped.  Draw a stack
 diagram for this program to convince yourself this is true.
 If the parameters {\tt x} and {\tt y} were declared as
-regular integer variables (without the {\tt \*}s), {\tt Swap()} would
+regular integer variables (without the {\tt $\*$s}), {\tt Swap()} would
 not work.  It would modify {\tt x} and {\tt y} and have no
 effect on {\tt i} and {\tt j}.
 
