HTML and Word versions

--- a/Chapter8_String.tex
+++ b/Chapter8_String.tex
@@ -1,7 +1,7 @@
 % LaTeX source for textbook ``How to think like a computer scientist''
 % Copyright (C) 1999  Allen B. Downey
 % Copyright (C) 2009  Thomas Scheffler
-
+% Copyright (C) 2023  Michael Penta
 
 \selectlanguage{english}
 \chapter{Strings and things}
