txs auto checkin

--- a/exercises/Exercise_4_english.tex
+++ b/exercises/Exercise_4_english.tex
@@ -15,7 +15,7 @@ Use the variables initialized below to evaluate each expression. State if C woul
 	\item {\tt m  n}
 	\item {\tt m + n}
 	\item {\tt m}
-	\item {\tt p <= k}
+	\item {\tt p <= s}
 	\item {\tt t < n}
 \end{enumerate}
 \end{exercise}
