--- a/Chapter4.tex
+++ b/Chapter4.tex
@@ -296,7 +296,7 @@ Let's look at program that combines selection, modulus, and randomness. The foll
  		// use the number of milliseconds from 1970 to seed rand
 	 	srand(time(0)); 
 		
-	 	//random number 1 2r 2
+	 	//random number 1 or 2
 	 	int flip = rand() % 2 + 1;
  	
 		if(flip == 1 )
