txs auto checkin

--- a/exercises/Exercise_4_english.tex
+++ b/exercises/Exercise_4_english.tex
@@ -72,7 +72,7 @@ once, it might end up with more than one number next to it.
 \item What is the value of the parameter {\tt quince} when {\tt baffle()}
 gets invoked for the first time?
 
-\item What is the exact output of this program? Pay close attention to the printed white space like spaces and {\tt \\n}.
+\item What is the exact output of this program? Pay close attention to the printed white space like spaces, tabs, and new lines.
 
 \end{enumerate}
 
@@ -85,7 +85,7 @@ gets invoked for the first time?
 		\item Define a function and a prototype called rollDie that has no parameters. 
 	In the function call rand to generate a random number 1, 2, 3, 4, 5, or 6. Print the resulting value.
 	
-	\item Define a main function that seeds the random with time calls your function 3 times
+	\item Define a main function that seeds the random with epoch time (use time() from time.h) and calls your function 3 times
 		\end{enumerate}
 \end{exercise}
 
