txs auto checkin

--- a/exercises/Exercise_4_english.tex
+++ b/exercises/Exercise_4_english.tex
@@ -12,7 +12,7 @@ Use the variables initialized below to evaluate each expression. State if C woul
 	double t = 1.2    
 \end{verbatim}
 \begin{enumerate}
-	\item {\tt m  n}
+	\item {\tt m / n}
 	\item {\tt m + n}
 	\item {\tt m}
 	\item {\tt p <= s}
