txs auto checkin

--- a/exercises/Exercise_8_english.tex
+++ b/exercises/Exercise_8_english.tex
@@ -29,9 +29,9 @@ letters.  Your algorithm can be iterative or recursive.
 
 
 \begin{exercise}
-Write a function called {\tt LetterHist()} that takes a String as a
-parameter and that returns a histogram of the letters in the String.
-The zeroeth element of the histogram should contain the number of a's
+Write a function called {\tt LetterHist()} that takes a string and and an int array as
+parameters. The function builds a histogram by filling the count of each letter in the string to the array.
+The zeroeth element of the histogram array should contain the number of a's
 in the String (upper and lower case); the 25th element should contain
 the number of z's.
 Your solution should only traverse the String once.
