txs auto checkin

--- a/exercises/Exercise_8_english.tex
+++ b/exercises/Exercise_8_english.tex
@@ -70,7 +70,7 @@ becomes 'o'.  The letters ``wrap around'' at the end, so 'z' becomes
 'm'.
 
 \begin{enumerate}
-\item  Write a function that takes a String and that returns a new String
+\item  Write a function that takes a String and a character array to store the string 
 containing the encoded version.  You should assume that the String
 contains upper and lower case letters, and spaces, but no other
 punctuation.  Lower case letters should be transformed into other lower
