--- a/Chapter3.tex
+++ b/Chapter3.tex
@@ -208,7 +208,7 @@ The {\tt (int)} operator casts the value of PI into an integer, so {\tt x} gets 
 This is essentially  rounding down, even if the fraction part is 0.99999999. 
 
 Of course we can cast an {\tt int} to a {\tt double} without any worry about loss of 
-information because we are only add .0 and not changing the value. 
+information because we are only adding .0 and not changing the value. 
 \begin{verbatim}
 	 int x = 3;
 	 double y = (double) x;  /* y = 3.0 */
