--- a/Chapter2.tex
+++ b/Chapter2.tex
@@ -258,7 +258,7 @@ This diagram shows the effect of the three assignment statements:
 \end{picture}
 
 When we assign values to variables, we have to make sure that
-the assigned value correspondents to the type of the variable.
+the assigned value corresponds to the type of the variable.
 In C  a variable has to have the same type as the
 value you assign.  For example, you cannot store a string in
 an {\tt int} variable.  The following statement generates a compiler
